--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@
 .ipynb_checkpoints/Rec_systems-checkpoint.ipynb
 .ipynb_checkpoints/Untitled1-checkpoint.ipynb
 .ipynb_checkpoints/Untitled2-checkpoint.ipynb
+
+.DS_Store
+/assets/.DS_Store
